# parking_app_backend

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  todo.md
app/: app.py
app/db/: database.py  db_models.py
app/email_service/: email_service.py
app/endpoints/: admin.py  bookings.py  user.py
app/request_models/: request_models.py
app/user/: aaa.py
db/: database.py  db_models.py  models.py  request_models.py  scratch.py
email_service/: email_service.py
request_models/: request_models.py
user/: aaa.py
