[tool.poetry]
name = "parking-app-backend"
version = "0.1.0"
description = ""
authors = ["defrell01"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.5.2"
uvicorn = "^0.24.0.post1"
sqlalchemy = "^2.0.23"
fastapi = "^0.105.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
